# lifeink

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  main.py  requirements.txt  start.sh
backend/: README.md  __main__.py  api.py  config-example.yaml  pyproject.toml
backend/api/: bind.py
backend/community/douban/: client.py  session.py
backend/community/douban/models/: __init__.py  game.py  profile.py
backend/community/douban/scrapers/: base.py  books.py  games.py  movies.py  notes.py  profile.py  reviews.py
backend/community/weread/: __init__.py
backend/db/: __init__.py  engine.py  models.py  repository.py
backend/docs/: smtp-setup.md
backend/feature/: pyproject.toml
backend/feature/feature/: __main__.py
backend/feature/feature/community/douban/: client.py  login.py
backend/feature/feature/community/douban/models/: movie.py  review.py
backend/src/: api.py
backend/src/api/: bind.py  douban.py  weread.py
backend/src/community/douban/: __init__.py  client.py  login.py  session.py
backend/src/community/douban/models/: book.py  movie.py  note.py  profile.py
backend/src/community/douban/scrapers/: base.py  games.py  movies.py  notes.py  profile.py  reviews.py
backend/src/community/weread/: __init__.py  client.py  login.py  session.py
backend/src/community/weread/models/: __init__.py  book.py  bookmark.py  profile.py
backend/src/community/weread/scrapers/: __init__.py  bookmarks.py  profile.py  shelf.py
backend/src/core/: middleware.py
backend/src/core/auth/: auth.py  deps.py  repository.py  routes.py
backend/src/core/utils/: config.py  email.py
backend/src/core/utils/templates/: verification_code.html
backend/tests/: test_login_integration.py  test_weread_client.py  test_weread_login.py  test_weread_session.py
docs/: douban-playwright-scrape.md  flomo-mcp.md  (+2 more)
(+52 files in other folders)
